@@ -1,34 +1,30 @@
 package nsl.webmapia.game.gameroom.dto;
 
 import lombok.*;
-import nsl.webmapia.game.gameroom.domain.GameRoom;
-import nsl.webmapia.game.member.dto.MemberDto;
+import nsl.webmapia.game.gameroom.entity.GameRoom;
+import nsl.webmapia.game.gameroom.entity.Participation;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor(access = AccessLevel.PRIVATE)
 @Builder
 @Getter
 @ToString
 public class GameRoomDto {
-    private int roomId;
+    private Integer roomId;
     private String roomName;
-    private String memberId;
+    private String hostMemberId;
     private LocalDateTime creationTime;
-    private List<MemberDto> participants;
+    private List<String> participantIds;
 
     public static GameRoomDto of(GameRoom domain) {
         return GameRoomDto.builder()
                 .roomId(domain.getRoomId())
                 .roomName(domain.getRoomName())
-                .memberId(domain.getHostMember().getMemberId())
+                .hostMemberId(domain.getHostMemberId())
                 .creationTime(domain.getCreationTime())
-                .participants(domain.getParticipants()
-                        .stream()
-                        .map(MemberDto::of)
-                        .collect(Collectors.toList()))
+                .participantIds(domain.getParticipationList().stream().map(Participation::getParticipantId).toList())
                 .build();
     }
 }
